<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Puzzle Images</string>
    <string name="title_game" translatable="false">Puzzle</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_choose_level">Choose level</string>
    <string name="help_title">Help</string>
    <string name="help_text">A well-known game from the puzzle series.
            There are fields with sizes 3x3, 4x4, 5x5, 6x6, where chips are located by default,
            numbered from 1 to 8, from 1 to 15, from 1 to 24, from 1 to 35, respectively.
            In addition to the standard chips, you can use your own images.
            The player can move the chips in the field at the expense of a free cell.
            \nThe goal of the game is to collect chips in a field with numbers in order,
            using as few moves as possible.
        </string>
    <string name="app_exit">App closed…</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification_title">We missed U…</string>
    <string name="notification_summary">Go back and continue playing</string>
    <string name="game_settings">Game Settings</string>
    <string name="notify_settings_title">Enable notification</string>
    <string name="notify_settings_summary">Reminder about the game every day</string>
    <string name="sound_summary_off">The game\'s sound effects are enabled</string>
    <string name="sound_summary_on">The game\'s sound effects are disabled</string>
    <string name="sound_title">Sound of the game</string>
    <string name="picture_history_summary">Saving photos to memory using the camera
        launched from the app</string>
    <string name="picture_history_title">Saving photos</string>
    <string name="solve_puzzle">Solve puzzle</string>
    <string name="shuffle_puzzle">Shuffle</string>
    <string name="take_gallery">Take Gallery</string>
    <string name="take_camera">Take Camera</string>
    <string name="best_results">Best results:</string>
    <string name="game_end_title">The game is over</string>
    <string name="game_solved_failed">Sad!
            The game can\'t even be completed by auto-solution!\nIt was not worth shuffle so hard :)
            \nTry again?</string>
    <string name="game_solved_success">Congratulations!
            \nYou have completed the puzzle!\nSteps taken: %1$s\n\nTry again?</string>
    <string name="hold_back">Click again to exit\nThe game will be lost!</string>
    <string name="solution_steps">The game ended by auto-solution.
        \nSteps taken: %1$s</string>
    <string name="size">Size</string>
    <string name="score">Score</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="play">Play</string>
    <string name="high_score">Record</string>
    <string name="high_score_choose_game">Record:\u0020</string>
    <string name="size_three">Size 3x3</string>
    <string name="size_four">Size 4x4</string>
    <string name="size_five">Size 5x5</string>
    <string name="size_six">Size 6x6</string>
    <string name="shuffle_steps_title">The number of shuffling moves</string>
    <string name="shuffle_steps_summary">Changing the number of steps when shuffle puzzle pieces</string>
    <string name="shuffle_steps_one">Minimum</string>
    <string name="shuffle_steps_two">Moderate</string>
    <string name="shuffle_steps_three">Medium</string>
    <string name="shuffle_steps_four">Large</string>
    <string name="shuffle_steps_five">Should be enough</string>
    <string name="hint_text">Tap anywhere to close</string>
    <string name="visibility_puzzle">Hint</string>
    <string name="delete_result_toast">Records reset!</string>
</resources>
