<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_activity_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="notifications_switch"
            android:summary="@string/notify_settings_summary"
            android:title="@string/notify_settings_title"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summaryOff="@string/sound_summary_on"
            android:summaryOn="@string/sound_summary_off"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:key="sound_switch"
            app:title="@string/sound_title" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summary="@string/picture_history_summary"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:key="picture_history_switch"
            app:title="@string/picture_history_title" />
    </PreferenceCategory>
</PreferenceScreen>