<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/game_settings" />
    <item
        android:id="@+id/action_solve"
        android:orderInCategory="2"
        android:title="@string/solve_puzzle" />
    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/shuffle_icn"
        android:orderInCategory="3"
        android:title="@string/shuffle_puzzle"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_visibility"
        android:icon="@drawable/visibility_icn"
        android:orderInCategory="4"
        android:title="@string/visibility_puzzle"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/add_gallery_icn"
        android:orderInCategory="5"
        android:title="@string/take_gallery"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/add_camera_icn"
        android:orderInCategory="6"
        android:title="@string/take_camera"
        app:showAsAction="always" />
</menu>